@@ -9,6 +9,7 @@ Version 1.19.0 *
 - added single project mode to focus one project only
 - improved allow to close non-mainfile while running
 - improved select next project when closing the current edited file-node in the Project Explorer that is also part of other projects
+- removed warning when deleting a project file that does not exist
 
 Version 1.18.6 *
 ==================
